--- a/system-backend/package.json
+++ b/system-backend/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "vite --port=3000",
         "build": "vite build"
     },
     "devDependencies": {
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.2"
     }
 }
