--- a/system-backend/composer.json
+++ b/system-backend/composer.json
@@ -50,7 +50,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-disx`ver": []
         }
     },
     "config": {
