--- a/system-frontend/package.json
+++ b/system-frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.2",
     "sweetalert2": "^11.10.7"
   },
